defaultTasks 'clean', 'screamCompile'

allprojects {
    group = 'org.screamingsandals.bedwars'
    version = '0.3.0-SNAPSHOT'
}

buildscript {
    repositories {
        maven { url 'https://repo.screamingsandals.org/public/' }
    }
    dependencies {
		classpath 'org.screamingsandals.gradle.builder:screaming-plugin-builder:1.0.32'
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.screamingsandals.gradle.builder'

    configurations.all {
        // Check for updates every build
        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
    }

    repositories {
        maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/'  }
        maven { url 'http://repo.onarandombox.com/content/groups/public'  }
        maven { url 'https://ci.frostcast.net/plugin/repository/everything'  }
        maven { url 'https://repo.codemc.org/repository/maven-public/'  }
        maven { url 'https://repo.alessiodp.com/releases/'  }
        maven { url 'https://jitpack.io' }
        maven { url 'https://repo.citizensnpcs.co'  }
        /* Our gitlab repo for scoreboard lib*/
        maven { url 'https://gitlab.hoznet.dev/api/v4/projects/13/packages/maven' }
    }
    
    dependencies {
    	compileOnly paper("1.16.4")
    }

    shadowJar {
        relocate 'com.zaxxer', 'org.screamingsandals.bedwars.lib.HikariCP'
        relocate 'org.screamingsandals.simpleinventories', 'org.screamingsandals.bedwars.lib.sgui'
        relocate 'org.screamingsandals.lib', 'org.screamingsandals.bedwars.lib'
        relocate 'org.bstats', 'org.screamingsandals.bedwars.lib.ext.bstats'
        relocate 'io.papermc.lib', 'org.screamingsandals.bedwars.lib.ext.paperlib'
        relocate 'pronze.lib', 'org.screamingsandals.bedwars.lib.ext.pronze'
        relocate 'org.spongepowered.configurate', 'org.screamingsandals.bedwars.lib.ext.configurate'
        relocate 'org.yaml.snakeyaml', 'org.screamingsandals.bedwars.lib.ext.snakeyaml'
        relocate 'com.google.gson', 'org.screamingsandals.bedwars.lib.ext.gson'
        relocate 'com.typesafe.config', 'org.screamingsandals.bedwars.lib.ext.typesafe'
        relocate 'io.leangen.geantyref', 'org.screamingsandals.bedwars.lib.ext.geantyref'
        relocate 'net.kyori', 'org.screamingsandals.bedwars.lib.ext.kyori'
        relocate 'org.checkerframework', 'org.screamingsandals.bedwars.lib.ext.checkerframework'

        if (System.getenv('BUILD_NUMBER') != null) {
            archiveClassifier.set(System.getenv('BUILD_NUMBER'))
        } else {
            archiveClassifier.set('dev')
        }
    }

    sourceCompatibility = '11.0'
}
